--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="top-poster">
         <div class="posters">
             <h1>
-                Conmebol Copa America 2021
+                Conmebol Copa-America 2021
             </h1> 
             <div class="buttons">
             <a  href="#" target="_blank" type="button">Watch Live</a>
