--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <div class="top-poster">
         <div class="posters">
             <h1>
-                Conmebol Copa-America 2021
+                Conmebol Copa America <br>2021
             </h1> 
             <div class="buttons">
-            <a  href="#" target="_blank" type="button">Watch Live</a>
-            <i class="fas fa-arrow-right"></i>
+            <a  href="#" target="_blank" type="button">Watch Live
+            <i class="fas fa-arrow-right"> </i></a>
             </div>
         </div>
         <div>
