--- a/index.html
+++ b/index.html
@@ -165,6 +165,76 @@
 ------------------------------------->
 
 
+
+
+
+<section class="contact">
+  <div class="content">
+    <h1>How to find Us / Contact Us</h1>
+    <div class="container">
+      <div class="contactinfo">
+        <div class="box">
+          <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
+          <div class="text">
+            <h3>Address</h3>
+            <p>Mashdair Road,<br>Chashara,Narayanganj,<br>Dhaka</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="icon"><i class="fas fa-phone"></i></div>
+          <div class="text">
+            <h3>Phone</h3>
+            <p>+8801545*4432</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="icon"><i class="fas fa-at"></i></div>
+          <div class="text">
+            <h3>Email</h3>
+            <p>football.fedaration@gmail.com</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="contactform">
+      <form>
+        <h2>send message</h2>
+        <div class="inputbox">
+          <input type="text" name="" required="required">
+          <span>Full Name</span>
+        </div>
+        <div class="inputbox">
+          <input type="text" name="" required="required">
+          <span>Email</span>
+        </div>
+        <div class="inputbox">
+          <textarea required="required"></textarea>
+          <span>Write Your Message...</span>
+        </div>
+        <div class="inputbox">
+          <input type="Submit" name="" value="Send">
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- ---------------------------------
 
 
