--- a/index.html
+++ b/index.html
@@ -165,7 +165,13 @@
 ------------------------------------->
 
 
+<!------------------------------------
 
+
+  Contuct us start
+
+
+------------------------------------>
 
 
 <section class="contact">
@@ -212,38 +218,27 @@
           <span>Write Your Message...</span>
         </div>
         <div class="inputbox">
-          <input type="Submit" name="" value="Send">
+          <input class="button" type="Submit" name="" value="Send">
         </div>
       </form>
     </div>
   </div>
 </section>
 
+<!------------------------------------
 
 
+  Contuct us end
 
 
-
-
-
-
-
-
-
-
-
-
-
+------------------------------------>
 
 <!-- ---------------------------------
-
 
           footer-section start
 
 
-
 ------------------------------------->
-
 
     <footer class="footer">
         <div class="footer_row">
@@ -263,12 +258,9 @@
         </div>
       </footer>
 
-      <!-- ---------------------------------
-
+      <!-------------------------------
 
           footer-section end
-
-
 
 ------------------------------------->
      </main>
