--- a/index.html
+++ b/index.html
@@ -174,53 +174,67 @@
 ------------------------------------>
 
 
-<section class="contact">
-  <div class="content">
-    <h1>How to find Us / Contact Us</h1>
-    <div class="container">
-      <div class="contactinfo">
+<section class="reserve sec" id="reserve">
+  <div class="container">
+    <div class="flexing">
+      <div class="reserve-detail reserve-item">
         <div class="box">
-          <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
-          <div class="text">
-            <h3>Address</h3>
-            <p>Mashdair Road,<br>Chashara,Narayanganj,<br>Dhaka</p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="icon"><i class="fas fa-phone"></i></div>
-          <div class="text">
-            <h3>Phone</h3>
-            <p>+8801545*4432</p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="icon"><i class="fas fa-at"></i></div>
-          <div class="text">
-            <h3>Email</h3>
-            <p>football.fedaration@gmail.com</p>
-          </div>
+          <p class="mini-title">
+            Qui quaeque mediocritatem et
+          </p>
+          <h3>Working hours</h3>
+          <h5>Monday - Friday</h5>
+          <p>8:00 am - 2:00 pm (breakfast, lunch) <br>
+            4:00 pm - 11:00 pm (dinner)
+          </p>
+          <h5>Saturday, Sunday</h5>
+          <p>
+            9:00 am - 3:00 pm (breakfast, lunch) <br>
+            5:00 pm - 12:00 pm (dinner)
+          </p>
+          <h3 class="contact">0(123) 456-78-91</h3>
         </div>
       </div>
-    </div>
-    <div class="contactform">
-      <form>
-        <h2>send message</h2>
-        <div class="inputbox">
-          <input type="text" name="" required="required">
-          <span>Full Name</span>
+      <div class="reserve-form reserve-item">
+        <div class="box">
+          <p class="mini-title">Book a table</p>
+          <h3>Make a reservation</h3>
+
+          <form action="" class="form">
+            <div class="flexing">
+              <div class="form-half">
+                <input type="text" name="Fname" id="Fname" placeholder="Enter Your First Name *">
+              </div>
+              <div class="form-half">
+                <input type="text" name="Lname" id="Lname" placeholder="Enter Your Last Name *">
+              </div>
+            </div>
+
+            <div class="flexing">
+              <div class="form-half">
+                <input type="tel" name="phone" id="phone" placeholder="Enter Your phone*">
+              </div>
+              <div class="form-half">
+                <input type="email" name="email" id="email" placeholder="Enter Your Email *">
+              </div>
+            </div>
+            <div class="flexing">
+              <div class="form-3">
+                <input type="date" name="date" id="date">
+              </div>
+              <div class="form-3">
+                <input type="time" name="time" id="time">
+              </div>
+              <div class="form-3">
+                <input type="number" name="people" id="people" placeholder="Number of People">
+              </div>
+            </div>
+            <div class="submission">
+              <input type="submit" value="Book a Table" class="submit">
+            </div>
+          </form>
         </div>
-        <div class="inputbox">
-          <input type="text" name="" required="required">
-          <span>Email</span>
-        </div>
-        <div class="inputbox">
-          <textarea required="required"></textarea>
-          <span>Write Your Message...</span>
-        </div>
-        <div class="inputbox">
-          <input class="button" type="Submit" name="" value="Send">
-        </div>
-      </form>
+      </div>
     </div>
   </div>
 </section>
@@ -233,7 +247,10 @@
 
 ------------------------------------>
 
+
+
 <!-- ---------------------------------
+
 
           footer-section start
 
