--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-    <main>
+    <main class="main">
     <div class="top-poster">
         <div class="posters">
             <h1>
@@ -247,8 +247,6 @@
 
 ------------------------------------>
 
-
-
 <!-- ---------------------------------
 
 
@@ -280,8 +278,6 @@
           footer-section end
 
 ------------------------------------->
-
-
 
      </main>
         </body>
