--- a/index.html
+++ b/index.html
@@ -1,284 +1,267 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Football-Fedaration</title>
+  <link rel="shortcut icon" href="./images/football/ball2.png" type="image/x-icon">
+  <!--Fontawesome icon-->
+  <script src="https://kit.fontawesome.com/be2991fef4.js" crossorigin="anonymous"></script>
 
-
-
-    <title>Association-Football</title>
-
-
-    <!-------------------------
-
-        Css-Link 
-
-    ---------------------------->
-    <link rel="stylesheet" href="style.css">
-
-
-    <!-------------------------- 
-
-        Font-Awesome
-
-    ----------------------------->
-    <script src="https://kit.fontawesome.com/d179225de2.js" crossorigin="anonymous"></script>
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-<!----------------------------------
 
-           navbar
-
-    ------------------------------->
-    <header>
-
+  <!-- header -->
+    <header class="header">
+      <div class="container">
+        <nav class="navigation-menu">
+        <i class="fas fa-bars" id="toggle"></i>
+          <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Clubs</a></li>
+            <li><a href="#">World Cup 2023</a></li>
+            <li><a href="#">UpComing Match</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <div class="login">
+            <a href="#"><i class="fas fa-sign-in-alt"></i> Login</a>
+          </div>
+        </nav>
+      </div>
     </header>
+  <!-- ! header -->
 
+  <!------------
+     main 
+    ----------->
+  <main>
 
-
-<!-----------------------------------
-
-
-
-          Poster start
-
-
-    -------------------------------->
-
-
-
-    <main class="main">
-    <div class="top-poster">
-        <div class="posters">
-            <h1>
-                Conmebol Copa America <br>2021
-            </h1> 
-            <div class="buttons">
-            <a  href="#" target="_blank" type="button">Watch Live
-            <i class="fas fa-arrow-right"> </i></a>
-            </div>
+    <!-- hero section  -->
+    <section class="hero" id="hero">
+      <div class="container">
+        <div class="hero-wrapper">
+          <div class="hero-details">
+            <h2>Conmebol Copa America 2021
+            </h2>
+            <a href="#" class="styled-button">Watch Live <i class="fas fa-long-arrow-alt-right"></i></a>
+          </div>
+          <div class="hero-image">
+            <img src="images/banner.png" alt="Football">
+            
+          </div>
         </div>
-        <div>
-            <img src="images/banner.png">
+      </div>
+    </section>
+    <!-- ! hero section  -->
+
+
+    <!-- ----------
+      players section ----
+    --------------->
+    <section class="players" id="players">
+      <div class="container">
+        <div class="players-wrapper">
+
+          <div class="single-player">
+            <div class="player-img">
+              <img src="./images/players/player-1.png" alt="Neymar Jr">
+            </div>
+            <div class="player-info">
+              <h3 class="player-name">Neymar Jr</h3>
+              <p class="player-desc">
+                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. He is widely regarded as one of the best players in the world.
+              </p>
+            </div>
+          </div>
+
+          <div class="single-player">
+            <div class="player-img"><img src="./images/players/player-2.png" alt="Leonel messi"></div>
+            <div class="player-info">
+              <h3 class="player-name">Lionel Messi</h3>
+              <p class="player-desc">
+                    Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and captains the Argentina national team. He is currently a free agent, having played all his professional career.
+              </p>
+            </div>
+          </div>
+
+          <div class="single-player">
+            <div class="player-img"><img src="./images/players/player-3.png" alt="Cristiano Ronaldo"></div>
+            <div class="player-info">
+              <h3 class="player-name">Cristiano Ronaldo</h3>
+              <p class="player-desc">
+                Cristiano Ronaldo dos Santos Aveiro, better known as Cristiano Ronaldo, or by his nickname 'CR7', is a Portuguese professional footballer.
+              </p>
+            </div>
+          </div>
+
+          <div class="single-player">
+            <div class="player-img"><img src="./images/players/player-4.png" alt="Paulo Dybala"></div>
+            <div class="player-info">
+              <h3 class="player-name">Paulo Dybala</h3>
+              <p class="player-desc">
+                Paulo Dybala (15 November 1993) is an Argentine footballer who plays as a forward for Italian club Juventus and the Argentina national team.
+              </p>
+            </div>
+          </div>
+
+          <div class="single-player">
+            <div class="player-img"><img src="./images/players/player-5.png" alt="Mesut Ozil"></div>
+            <div class="player-info">
+              <h3 class="player-name">Mesut Ozil </h3>
+              <p class="player-desc">
+                Mesut Ozil Biography · Known for his technical skills and versatility as an attacking midfielder, He is a German professional footballer
+              </p>
+            </div>
+          </div>
+
+          <div class="single-player">
+            <div class="player-img"><img src="./images/players/player-6.png" alt="Mauro Icard"></div>
+            <div class="player-info">
+              <h3 class="player-name">Mauro Icardi </h3>
+              <p class="player-desc">
+                Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.Icardi began his footballing career at La Masia.
+              </p>
+            </div>
+          </div>
+
+          <div class="single-player">
+            <div class="player-img"><img src="./images/players/player-7.png" alt="Di Maria"></div>
+            <div class="player-info">
+              <h3 class="player-name">Di Maria</h3>
+              <p class="player-desc">
+                Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. 
+              </p>
+            </div>
+          </div>
+
+          <div class="single-player">
+            <div class="player-img"><img src="./images/players/player-8.png" alt="Kylian Mbappe"></div>
+            <div class="player-info">
+              <h3 class="player-name">Kylian Mbappe</h3>
+              <p class="player-desc">
+                Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team. Mbappé began his senior career with Ligue 1 club Monaco, making his professional debut in 2015.
+              </p>
+            </div>
+          </div>
+
+          <div class="single-player">
+            <div class="player-img"><img src="./images/players/player-9.png" alt="Mohamed Salah"></div>
+            <div class="player-info">
+              <h3 class="player-name">Mohamed Salah</h3>
+              <p class="player-desc">
+                Mohamed Salah is an Egyptian professional footballer who plays as a forward for Premier League club and captains the Egypt national team.
+              </p>
+            </div>
+          </div>
+
         </div>
-    </div>
-
-
-
-    <!-----------------------------------
-
-
-
-        Poster end
-
-
-    -------------------------------->
-
-
-
-<!-------------------------------- --
-
-
-        blog-secton start
-
-
-------------------------------------->
-
-
-    <section class="blogs">
-        <div class="_blog">
-            <div class="blog_details">
-              <img src="images/players/player-1.png" alt="Neymar jr" />
-              <h2>Neymar jr</h2>
-              <p>
-                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
-              </p>
-            </div>
-            <div class="blog_details">
-              <img src="images/players/player-2.png" alt="Lionel Messi" />
-              <h2>Lionel Messi</h2>
-              <p>
-                Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and captains the Argentina national team.
-              </p>
-            </div>
-            <div class="blog_details">
-              <img src="images/players/player-3.png" alt="Cristiano Ronaldo" />
-              <h2>Cristiano Ronaldo</h2>
-              <p>
-                Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.
-              </p>
-            </div>
-            <div class="blog_details">
-              <img src="images/players/player-4.png" alt="Paulo Dybala" />
-              <h2>Paulo Dybala</h2>
-              <p>
-                Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team. 
-              </p>
-            </div>
-            <div class="blog_details">
-              <img src="images/players/player-5.png" alt="Mesut Özil" />
-              <h2>Mesut Özil</h2>
-              <p>
-                Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills, creativity, agility, and finesse.
-              </p>
-            </div>
-            <div class="blog_details">
-              <img src="images/players/player-6.png" alt="Mauro Icardi" />
-              <h2>Mauro Icardi </h2>
-              <p>
-                Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.
-              </p>
-            </div>
-            <div class="blog_details">
-              <img src="images/players/player-7.png" alt="Ángel Di María" />
-              <h2>Ángel Di María</h2>
-              <p>
-                Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder.
-              </p>
-            </div>
-            <div class="blog_details">
-              <img src="images/players/player-8.png" alt="Kylian Mbappe" />
-              <h2>Kylian Mbappe</h2>
-              <p>
-                Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.
-              </p>
-            </div>
-            <div class="blog_details">
-              <img src="images/players/player-9.png" alt="Mohannad salah" />
-              <h2>Mohamed Salah</h2>
-              <p>
-                Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team.
-              </p>
-            </div>
-            </div>
+      </div>
     </section>
 
 
-<!------------------------- ---------
 
+    <!----------------
 
-       blog-secton end
+      players section
 
+    -------------- -->
 
-------------------------------------->
-
-
-<!------------------------------------
-
-
-  Contuct us start
-
-
+    <!-----------------------------
+  Contuct us 
 ------------------------------------>
 
-
 <section class="reserve sec" id="reserve">
-  <div class="container">
-    <div class="flexing">
-      <div class="reserve-detail reserve-item">
-        <div class="box">
-          <p class="mini-title">
-            Qui quaeque mediocritatem et
-          </p>
-          <h3>Working hours</h3>
-          <h5>Monday - Friday</h5>
-          <p>8:00 am - 2:00 pm (breakfast, lunch) <br>
-            4:00 pm - 11:00 pm (dinner)
-          </p>
-          <h5>Saturday, Sunday</h5>
-          <p>
-            9:00 am - 3:00 pm (breakfast, lunch) <br>
-            5:00 pm - 12:00 pm (dinner)
-          </p>
-          <h3 class="contact">0(123) 456-78-91</h3>
+    <div class="container">
+      <div class="flexing">
+        <div class="reserve-detail reserve-item">
+          <div class="box">
+            <p class="mini-title">
+              If you're free than chat with us
+            </p>
+            <h3>Chatting hours</h3>
+            <h5>Monday - Friday</h5>
+            <p>8:00 am - 2:00 pm  <br>
+              4:00 pm - 11:00 pm 
+            </p>
+            <h5>Saturday, Sunday</h5>
+            <p>
+              9:00 am - 3:00 pm  <br>
+              5:00 pm - 12:00 pm 
+            </p>
+            <h3 class="contact">0-123 456-78-91</h3>
+          </div>
         </div>
-      </div>
-      <div class="reserve-form reserve-item">
-        <div class="box">
-          <p class="mini-title">Book a table</p>
-          <h3>Make a reservation</h3>
-
-          <form action="" class="form">
-            <div class="flexing">
-              <div class="form-half">
-                <input type="text" name="Fname" id="Fname" placeholder="Enter Your First Name *">
+        <div class="reserve-form reserve-item">
+          <div class="box">
+            <p class="mini-title">Information</p>
+            <h3>Personal Information</h3>
+  
+            <form action="" class="form">
+              <div class="flexing">
+                <div class="form-half">
+                  <input type="text" name="Fname" id="Fname" placeholder="Enter Your First Name *">
+                </div>
+                <div class="form-half">
+                  <input type="text" name="Lname" id="Lname" placeholder="Enter Your Last Name *">
+                </div>
               </div>
-              <div class="form-half">
-                <input type="text" name="Lname" id="Lname" placeholder="Enter Your Last Name *">
+  
+              <div class="flexing">
+                <div class="form-half">
+                  <input type="tel" name="phone" id="phone" placeholder="Enter Your phone*">
+                </div>
+                <div class="form-half">
+                  <input type="email" name="email" id="email" placeholder="Enter Your Email *">
+                </div>
               </div>
-            </div>
-
-            <div class="flexing">
-              <div class="form-half">
-                <input type="tel" name="phone" id="phone" placeholder="Enter Your phone*">
+              <div class="flexing">
+                <div class="form-3">
+                  <input type="date" name="date" id="date">
+                </div>
+                <div class="form-3">
+                  <input type="time" name="time" id="time">
+                </div>
+                </div>
+              <div class="submission">
+                <input type="submit" value="Send" class="submit">
               </div>
-              <div class="form-half">
-                <input type="email" name="email" id="email" placeholder="Enter Your Email *">
-              </div>
-            </div>
-            <div class="flexing">
-              <div class="form-3">
-                <input type="date" name="date" id="date">
-              </div>
-              <div class="form-3">
-                <input type="time" name="time" id="time">
-              </div>
-              <div class="form-3">
-                <input type="number" name="people" id="people" placeholder="Number of People">
-              </div>
-            </div>
-            <div class="submission">
-              <input type="submit" value="Book a Table" class="submit">
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+  
+  <!----------------------------------
+  Contuct us
+  ------------------------------------>
 
-<!------------------------------------
-
-
-  Contuct us end
-
-
------------------------------------->
-
-<!-- ---------------------------------
-
-
-          footer-section start
-
-
-------------------------------------->
-
+    <!-- footer section -->
     <footer class="footer">
-        <div class="footer_row">
-          <div class="footer_col_1">
-            <img src="images/Logo.png" alt="football logo">    
-          </div>
-          <div class="footer_col_2">
-            <a href="#" target="_blank"><i class="fab fa-facebook-f" ></i></a>
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-youtube"></i></i></a>
-          </div>
-          <div class="footer_col_3">
-            <h3> Copyright ©2022 Football</h3>
-          </div>
+      <div class="container">
+        <div class="footer-logo">
+          <img src="./images/Logo.png" alt="Footer Logo">
         </div>
-      </footer>
+        <div class="social-icons">
+          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
+          <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-facebook-messenger"></i></a>
+        </div>
+        <p class="copy-right">
+          Copyright &copy 2022 Football
+        </p>
+      </div>
+    </footer>
+    <!-- ! footer section -->
 
-      <!-------------------------------
 
-          footer-section end
-
-------------------------------------->
-
-     </main>
-        </body>
-        </html>
+  </main>
+  <!-- ! Project main area -->
+  
+</body>
+</html>
