--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Football-Fedaration</title>
-  <link rel="shortcut icon" href="./images/football/ball2.png" type="image/x-icon">
+
+  <!-- title icon -->
+
+  <link rel="icon" type=" image/x-icon" href="images/icon-football.png"/>
+  
   <!--Fontawesome icon-->
+  
   <script src="https://kit.fontawesome.com/be2991fef4.js" crossorigin="anonymous"></script>
 
   <!-- CSS -->
